# lphone

./: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  call_func.c  call_func.h  config.status  configure  configure.ac  const.h  lphone.c  lphone.conf  lphone.conf.sample  lutils.c  lutils.h
.deps/: call_func.Po  lphone.Po  lutils.Po
autom4te.cache/: output.0  requests  traces.0  traces.1
